# agent-sHELF

./: .gitignore  README.md
.github/workflows/: validate-agents.yml
agents/code-reviewer/: agent.json  agent.md  system-prompt.md
agents/code-reviewer/skills/: go-patterns.md  python-review.md  security-audit.md
agents/datamart-generator/: README.md  agent.json  agent.md
agents/datamart-generator/skills/: dataform-output.md  input-reader.md  public-builder.md  staging-builder.md
agents/dataset-documenter/: README.md  agent.json  agent.md
agents/dataset-documenter/skills/: analysis-playbook.md  auth-and-guardrails.md  output-template.md  powershell-runner.md
agents/looker-analyst/: agent.json  agent.md  system-prompt.md
agents/looker-analyst/skills/: looker-usage.md  metrics-guide.md
agents/notion-writer/: agent.json  agent.md  system-prompt.md
agents/notion-writer/skills/: notion-structure.md  writing-style.md
mcp-server/: .dockerignore  Dockerfile  main.py  pyproject.toml
mcp-server/providers/: base.py  factory.py  github.py
mcp-server/tools/: configure_workspace.py  get_agent.py  get_skill.py  list_agents.py
